--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cheerio": "^1.1.0",
     "cheerio-select": "^2.1.0",
     "combined-stream": "^1.0.8",
+    "cors": "^2.8.5",
     "delayed-stream": "^1.0.0",
     "dom-serializer": "^2.0.0",
     "domhandler": "^5.0.3",
@@ -20,6 +21,7 @@
     "es-errors": "^1.3.0",
     "es-object-atoms": "^1.1.1",
     "es-set-tostringtag": "^2.1.0",
+    "express": "^5.1.0",
     "follow-redirects": "^1.15.9",
     "form-data": "^4.0.3",
     "function-bind": "^1.1.2",
@@ -34,6 +36,8 @@
     "math-intrinsics": "^1.1.0",
     "mime-db": "^1.52.0",
     "mime-types": "^2.1.35",
+    "morgan": "^1.10.1",
+    "node-cron": "^4.2.1",
     "p-limit": "^6.2.0",
     "parse5": "^7.3.0",
     "parse5-htmlparser2-tree-adapter": "^7.1.0",
@@ -48,5 +52,13 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/pipetboy2001/club-de-lectores-Mercurio-scraper.git"
+  },
+  "bugs": {
+    "url": "https://github.com/pipetboy2001/club-de-lectores-Mercurio-scraper/issues"
+  },
+  "homepage": "https://github.com/pipetboy2001/club-de-lectores-Mercurio-scraper#readme"
 }
